# fn_block

./: .appveyor.yml  .travis.yml  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
benches/: fn_block_benchmark.rs
src/: lib.rs  tests.rs
